# genai_capability_bench

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: eval_core_demo.yaml  eval_openai_compatible_template.yaml
datasets/curated/: answer_accuracy_knowledge_v1_manifest.json
datasets/samples/: answer_accuracy_sample.json  core_demo_tasks.json
docs/: answer_accuracy_framework.md  capability_taxonomy.md  development_plan.md  evaluation_standards.md  repo_integration_strategy.md
notebooks/: 01_answer_accuracy.ipynb  02_truthfulness.ipynb  03_instruction_following.ipynb  04_reasoning_logic.ipynb  05_core_llm_leaderboard.ipynb
scripts/: build_curated_answer_accuracy.py
src/genai_capability_bench/: __init__.py
src/genai_capability_bench/adapters/: __init__.py
src/genai_capability_bench/capabilities/: __init__.py  answer_accuracy.py  base.py  instruction_following.py  reasoning_logic.py  registry.py  truthfulness.py
src/genai_capability_bench/clients/: __init__.py  base.py  factory.py  openai_compatible.py
src/genai_capability_bench/core/: __init__.py  runner.py  schemas.py
src/genai_capability_bench/datasets/: __init__.py  registry.py
src/genai_capability_bench/metrics/: __init__.py  generation.py  lexical.py  llm_judge.py  registry.py  semantic.py
src/genai_capability_bench/notebooks/: __init__.py  answer_accuracy.py
src/genai_capability_bench/reporting/: diagnostics.py  model_labels.py  (+5 more)
tests/: test_answer_accuracy_workflow.py  test_config_helpers.py  test_dataset_registry.py  test_metrics.py  test_reporting.py  test_runner_smoke.py
(+2 files in other folders)
