[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-capability-bench"
version = "0.1.0"
description = "A modular benchmark suite for evaluating GenAI capabilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.24",
  "openai>=1.40",
  "pandas>=2.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29",
  "ipywidgets>=8.1",
  "nbformat>=5.10",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

